...
                            <constraint firstItem="DFv-DK-aOG" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="K14-YO-9kJ"/>
                            <constraint firstItem="DFv-DK-aOG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="PKT-pk-nLQ"/>
                            <constraint firstItem="DFv-DK-aOG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="gQL-UN-sYR"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Current Market" id="3lV-Wv-CZd"/>
                    <connections>
                        <outlet property="activitySpinner" destination="Gkc-rw-8aC" id="JOo-ib-eEC"/>
                        <outlet property="tableView" destination="DFv-DK-aOG" id="mzv-1z-VYF"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="02c-6C-ya3">
                                <rect key="frame" x="16" y="134" width="84" height="85.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ticker" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebT-zv-vnj">
                                        <rect key="frame" x="0.0" y="0.0" width="47" height="20.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ticker"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vbg-jh-Eda">
                                        <rect key="frame" x="0.0" y="20.5" width="84" height="47"/>
...
                            <constraint firstItem="d7h-Zi-ec9" firstAttribute="centerY" secondItem="cfQ-lB-0Po" secondAttribute="centerY" id="jbj-wD-Uvj"/>
                            <constraint firstItem="02c-6C-ya3" firstAttribute="leading" secondItem="cfQ-lB-0Po" secondAttribute="leading" constant="16" id="mCI-k7-yBJ"/>
                            <constraint firstItem="A0y-se-Nah" firstAttribute="top" secondItem="02c-6C-ya3" secondAttribute="bottom" constant="35" id="wWL-RZ-7uu"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="cfQ-lB-0Po"/>
                    </view>
                    <navigationItem key="navigationItem" title="Stock" id="eWO-u4-hBc"/>
                    <connections>
                        <outlet property="activitySpinner" destination="d7h-Zi-ec9" id="2CM-py-3aH"/>
                        <outlet property="detailCompanyLogo" destination="s0E-Q0-csh" id="V1H-zT-iJt"/>
                        <outlet property="highPrice" destination="6Ia-qp-xUP" id="sqc-cr-lGH"/>
                        <outlet property="lowPrice" destination="E1t-7R-HFu" id="3Uu-uc-Stk"/>
                        <outlet property="price" destination="Vbg-jh-Eda" id="JXI-Mz-bXA"/>
...
