...
    }
    
    override func viewDidAppear(_ animated: Bool) {
        downloadStockPerformanceData(forTickers: defaultTickerSymbols)
    }
    
    let defaultTickerSymbols = ["NKE","MSFT","AAPL","GOOG","ORCL","COST","AMZN","WMT","GE","XOM","CVX","GM","VLO","BA","WAG","AIG","PFE","DOW","UPS","DELL","LMT","BBY","DIS"]
    var performanceData = [MainStockPerformanceData]()

    func downloadStockPerformanceData(forTickers ticker: [String]) {
        
        // Converts the ticker of type Array into type String for use in URL request with multiple tickers
        let tickerString = ticker.joined(separator: ",")
...
